--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "craftycrates",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "mysql2": "^3.6.2",
-    "sequelize": "^6.33.0"
-  }
+	"name": "craftycrates",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"dev": "nodemon index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"express": "^4.18.2",
+		"mysql2": "^3.6.2",
+		"sequelize": "^6.33.0"
+	},
+	"devDependencies": {
+		"nodemon": "^3.0.1"
+	}
 }
