--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"bcryptjs": "^2.4.3",
 		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
 		"mysql2": "^3.6.2",
 		"sequelize": "^6.33.0"
 	},
