Create intermediate table seeder

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -4,7 +4,8 @@
 		"password": "your password",
 		"database": "database_development",
 		"host": "127.0.0.1",
-		"dialect": "mysql"
+		"dialect": "mysql",
+		"jwt_secret": "your secret"
 	},
 	"test": {
 		"username": "your username",
